# proyecto-final-2025-2-grupo-4

./: .gitignore  CMakeLists.txt  README.md
include/: neural_network.h  nn_activation.h  nn_dense.h  nn_loss.h  nn_optimizer.h  tensor.h
src/: csv_generator.cpp  data_collector.cpp  keyboard_controller.h  keyboard_input.cpp  main_app.cpp  trainer.cpp
